# tiago_social_robot_real

./: README.md  tiago_experiments-melodic.rosinstall
tiago_social_bringup_real/: CMakeLists.txt  README.md  package.xml
tiago_social_bringup_real/scripts/: devel_rosmaster_conn.sh  prepare_configured_robot.sh  prepare_unconfigured_robot.sh  real_apt_upgrade.sh  real_install_deps.sh  real_prep_ws.sh  real_stop_nav_stack.sh  script_via_ssh.sh  xfce_session_local.sh
tiago_social_experiments_real/: CMakeLists.txt  README.md  package.xml
tiago_social_experiments_real/config/: 012_pose_undock.yaml  012_static_finish_amcl.yaml  012_static_finish_pose.yaml  012_static_start_amcl.yaml  012_static_start_pose.yaml  README.md
tiago_social_experiments_real/config/012/: docked_ftl_amcl.yaml  docked_ftl_pose.yaml  undock_ftl_amcl.yaml  undock_ftl_pose.yaml
tiago_social_experiments_real/config/012/dynamic/: finish_amcl.yaml
tiago_social_experiments_real/config/012/static/: finish_pose.yaml  start_amcl.yaml
tiago_social_experiments_real/launch/: 012.launch  development_tools.launch  scenario_base.launch
tiago_social_experiments_real/scripts/: copy_and_process_srpb_logs.sh  echo_timestamp.sh  rosbag_navigation.sh
