<?xml version="1.0"?>
<package format="2">
  <name>tiago_social_experiments_real</name>
  <version>0.0.0</version>
  <description>The tiago_social_experiments_real package</description>
  <author email="chromedivizer@gmail.com">Jarosław Karwowski</author>
  <maintainer email="chromedivizer@gmail.com">Jarosław Karwowski</maintainer>
  <license>BSD-3</license>
  <url type="website">https://github.com/rayvburn/tiago_social_robot_real</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>tiago_social_bringup</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
